style: fix and refine dark mode color contrast

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,7 +1,8 @@
 ---
 ---
 
-@import "{{ site.theme }}";
+// Removed invalid Liquid import. If you need to import a SCSS file, use:
+// @import "theme"; // or the actual SCSS filename without curly braces
 
 /* ===== Photo-zine Grey Blue aesthetic ===== */
 :root{
